Switch to Base64 encoder/decoder from Commons Codec. Performance testing shows it to be ~25-30x slower than Tomcat's implementation.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc7.0.x/trunk@1459346 13f79535-47bb-0310-9956-ffa450edef68